# jni-rs

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: typesignature.rs
mayhem/: Dockerfile  typesignature.mayhemfile
