[package]
name = "jni-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.jni]
path = "../crates/jni"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "typesignature"
path = "fuzz_targets/typesignature.rs"
test = false
doc = false
